@@ -1,6 +1,0 @@
-require 'rails_helper'
-
-RSpec.describe HomeController, type: :controller do
-
-
-end
