@@ -1,12 +1,0 @@
-require 'rails_helper'
-
-RSpec.describe SubdomainsController do
-
-  describe "GET show" do
-    it "returns http success" do
-      # get :show
-      # expect(response).to have_http_status(:success)
-    end
-  end
-
-end
