@@ -49,7 +49,7 @@ RSpec.configure do |config|
   config.infer_spec_type_from_file_location!
 
   config.include FactoryGirl::Syntax::Methods
-  config.include Devise::Test::ControllerHelpers, type: :controller
+  config.include Warden::Test::Helpers
 
   # Include ShowMeTheCookies for retrieving cookies from Capybara.
   config.include ShowMeTheCookies, type: :feature
