@@ -1,8 +1,8 @@
 require 'rails_helper'
 
-RSpec.describe DropboxesController do
+RSpec.describe 'dropbox' do
   it 'verify dropbox webhook' do
-    get :webhook_verify, params: { challenge: '123' }
+    get dropbox_webhook_path, params: { challenge: '123' }
 
     expect(response).to be_ok
     expect(response.body).to eq '123'
@@ -22,15 +22,16 @@ RSpec.describe DropboxesController do
         to receive(:new).with(['1', '2']).and_return(service)
       expect(service).to receive(:execute)
 
-      request.headers['X-Dropbox-Signature'] =
-        'aae047deeec6f5347e5dd7f94a2b408196979a56fd7962b971a99849d2132aa0'
-      post :delta, params: { delta: { users: ['1', '2'] } }
+      post dropbox_delta_path,
+           params: { delta: { users: ['1', '2'] } },
+           headers: { 'X-Dropbox-Signature' =>
+                      'a458d3e23d3f23982b0eac2e6a4d151db978649d75145f827b99e0238c20144c' }
 
       expect(response).to be_ok
     end
 
     it 'dont allow to update users when dropbox signature is not valid' do
-      post :delta, params: { delta: { users: ['1', '2'] } }
+      post dropbox_delta_path, params: { delta: { users: ['1', '2'] } }
 
       expect(response).to be_unauthorized
     end
