@@ -3,6 +3,7 @@ v 1.3.0 (unreleased)
   - Update to rails 5.0.0.1
   - Update dependencies
   - Add possiblity to define rimrock, pldata, datanet urls using env variables
+  - Convert controller tests into request tests
 
 v 1.2.0
   - User is asked about proxy password only when loading to domain app
